bases/apps/filebrowser/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
      - image: docker.io/filebrowser/filebrowser:v2.23.0
        imagePullPolicy: IfNotPresent
        name: filebrowser
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /srv
          name: media
        - mountPath: /config
          name: filebrowser-config
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: filebrowser-media-nfs
      - name: filebrowser-config
        persistentVolumeClaim:
          claimName: filebrowser-config
