bases/apps/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: filebrowser
  name: filebrowser
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: filebrowser
  type: ClusterIP
