bases/apps/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: filebrowser-ingress
 annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
spec:
 tls:
 - hosts:
   - filebrowser.local
   secretName: filebrowser-tls-secret
 rules:
 - host: filebrowser.local
   http:
     paths:
     - backend:
         service:
           name: filebrowser
           port:
             number: 80
       path: /
       pathType: Prefix
